--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 .Rhistory
 .RData
 FABQ.Score1.pdf
+FABQScore1.pdf
+FABQScore2.pdf
+HSCL10Score.pdf
+KravspesifikasjonNNRRskjema1b.docx
+NDI_PrePost.pdf
+NDItabell.csv
+ODI_PrePost.pdf
+ODItabell.csv
+Obligatoriske felter i NNRR skjema 1b.docx
+PainDurationNow.pdf
+Pasientfornoydhet.pdf
+SmertestillendeResept.pdf
+SmertestillendeUtenResept.pdf
+AarsakSmerte_PasRap.pdf
