--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -11,3 +11,44 @@ nnrr31082015_skjema2.xlsx
 tilAarsrapport2015.R
 tilAarsrapport2015predata.R
 tmp.pdf
+DiagnosekoderNNRR.csv
+DiagnosestrukturNNRR2018_v1.xlsx
+Diagnosesystem.docx
+Diagnosevelger NNRR skjema 1b.docx
+Kodebok27092016.xlsx
+Kodebok_QA08122016.xlsx
+Kodebok_test08122016.xlsx
+Kodebok_test16122016.xlsx
+ManglendeNNRRdiag.csv
+NNR Pasient 1a (50114 - Activated Traditional).pdf
+NNRR(6)Arsrapport-for2015.doc
+NNRR_Oversikt.xlsx
+Obligatoriskefeltkrav180517.docx
+Rapportskjema_fagsenteret.docx
+SortertTabellDiagnosekoderNNRR.csv
+SortertTabellDiagnosekoderNNRRuformatert.csv
+datakvalNNRR.Rmd
+datakvalNNRR.html
+datakvalNNRR.pdf
+datakvalNNRRskjema1a.Rmd
+datakvalNNRRskjema1a.html
+datakvalitet.R
+diag1.PNG
+diag2.PNG
+diagnoserkoderNNRR.R
+diagnosestrukturNNRR.xlsx
+diagnosestrukturNNRR_v2.xlsx
+feilsok.R
+formuleringer.txt
+kodebok16122016_1a.csv
+kodebok16122016_1b.csv
+kodebok16122016_2.csv
+kodebok29112016.xlsx
+kodebok29112016_1a.csv
+kodebok29112016_1b.csv
+kodebok29112016_2.csv
+nnrr.R
+tomme_reg.csv
+tomme_reg1a.csv
+tomme_reg1b.csv
+tomme_reg2.csv
