--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -19,3 +19,10 @@ TallTilAarsrapport2015.tex
 NDItabell.csv
 ODItabell.csv
 Sammenhengende.varighet.av.naavaerende.smerter.pdf
+TallTilAarsrapport2016-concordance.tex
+TallTilAarsrapport2016.lof
+TallTilAarsrapport2016.log
+TallTilAarsrapport2016.lot
+TallTilAarsrapport2016.pdf
+TallTilAarsrapport2016.synctex.gz
+TallTilAarsrapport2016.tex
