--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -52,3 +52,8 @@ tomme_reg.csv
 tomme_reg1a.csv
 tomme_reg1b.csv
 tomme_reg2.csv
+ICD-10 2018 2017-06-14.xlsx
+datakval.csv
+icd10.csv
+kodebokNNRR25052018.xlsx
+utforsk_data.R
