--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -26,3 +26,9 @@ TallTilAarsrapport2016.lot
 TallTilAarsrapport2016.pdf
 TallTilAarsrapport2016.synctex.gz
 TallTilAarsrapport2016.tex
+KvartalsrapportNNRR-concordance.tex
+KvartalsrapportNNRR.log
+KvartalsrapportNNRR.pdf
+KvartalsrapportNNRR.synctex.gz
+KvartalsrapportNNRR.tex
+framed.sty
