--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -32,3 +32,9 @@ KvartalsrapportNNRR.pdf
 KvartalsrapportNNRR.synctex.gz
 KvartalsrapportNNRR.tex
 framed.sty
+AarsakSmerte.pdf
+TallTilAarsrapport2017-concordance.tex
+TallTilAarsrapport2017.log
+TallTilAarsrapport2017.pdf
+TallTilAarsrapport2017.synctex.gz
+TallTilAarsrapport2017.tex
