--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -38,3 +38,5 @@ TallTilAarsrapport2017.log
 TallTilAarsrapport2017.pdf
 TallTilAarsrapport2017.synctex.gz
 TallTilAarsrapport2017.tex
+TallTilAarsrapport2017_alle.pdf
+TallTilAarsrapport2017tmp.pdf
