--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -60,3 +60,13 @@ utforsk_data.R
 avvik_NDI.csv
 avvik_NDI_oppdatert.csv
 avvik_gml_ny.csv
+18-9Notattil Kevin060918.docx
+AarsakSmerte.png
+AarsakSmerte_uTittel.png
+BestillingerHemit.xlsx
+PainDurationNow.png
+PainDurationNow_uTittel.png
+PatientAge.png
+PatientAge_uTittel.png
+arb_status.R
+kjorefil.R
