--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -40,3 +40,5 @@ TallTilAarsrapport2017.synctex.gz
 TallTilAarsrapport2017.tex
 TallTilAarsrapport2017_alle.pdf
 TallTilAarsrapport2017tmp.pdf
+PatientAge.pdf
+TallTilAarsrapport2017 - Kopi.pdf
