--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ Pasientfornoydhet.pdf
 SmertestillendeResept.pdf
 SmertestillendeUtenResept.pdf
 AarsakSmerte_PasRap.pdf
+datadumpnavn.csv
+utleveringJorunn1802019.csv
+utleveringJorunn1802019.7z
+utleveringJorunn1802019.zip
