--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(nnrrFigAndelerPrePost)
 export(nnrrFigAntallKjonnsdelt)
 export(nnrrFigGjsnPrePostGrVar)
 export(nnrrHentRegData)
+export(nnrrIndikatorTabell)
 export(nnrrPrepVar)
 export(nnrrPreprosess)
 export(nnrrUtvalg)
