--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -74,3 +74,7 @@ datakvalNNRR_v2.docx
 datakvalNNRR_v2.html
 datakvalNNRR_v2.log
 datakvalNNRR_v2.pdf
+DATAUTLEVERING_NNRR_per30.04.19.docx
+NNRR_variabelliste_utlevering_tyrdal.csv
+Variabler 1A.csv
+Variabler 1B.csv
