--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -42,3 +42,20 @@ TallTilAarsrapport2017_alle.pdf
 TallTilAarsrapport2017tmp.pdf
 PatientAge.pdf
 TallTilAarsrapport2017 - Kopi.pdf
+TallTilAarsrapport2015-2018.pdf
+TallTilAarsrapport2015-2018_v2.pdf
+TallTilAarsrapport2018-concordance.tex
+TallTilAarsrapport2018.log
+TallTilAarsrapport2018.pdf
+TallTilAarsrapport2018.synctex.gz
+TallTilAarsrapport2018.tex
+TallTilAarsrapport_2015-2018.pdf
+TallTilAarsrapport_2018.pdf
+nnrrIndikatorer-concordance.tex
+nnrrIndikatorer.Rnw
+nnrrIndikatorer.log
+nnrrIndikatorer.pdf
+nnrrIndikatorer.synctex.gz
+nnrrIndikatorer.tex
+nnrrIndikatorer_gml.pdf
+nnrrIndikatorer_old.pdf
