--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -59,3 +59,23 @@ nnrrIndikatorer.synctex.gz
 nnrrIndikatorer.tex
 nnrrIndikatorer_gml.pdf
 nnrrIndikatorer_old.pdf
+fornoyd_med_behandling.pdf
+hcsl_hoy.pdf
+klin_vikt_endr_smerte_aktiv.pdf
+klin_vikt_endr_smerte_passiv.pdf
+minimal_funksjonsnedsettelse.pdf
+nytte_av_behandling.pdf
+pasrapp_beh_klinikk.pdf
+smertevarighet_str_enn_2aar.pdf
+tilbake_i_arbeid.pdf
+tverrfagligbeh.pdf
+Alder_pr_enhet_pr_aar.pdf
+ODI_KliniskViktig.pdf
+Smerte_i_aktivitet.pdf
+Smerte_i_ro.pdf
+TallTilAarsrapport2019-concordance.tex
+TallTilAarsrapport2019.log
+TallTilAarsrapport2019.synctex.gz
+TallTilAarsrapport2019.tex
+beh_kommunalt.pdf
+beh_spesialist.pdf
