--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -78,3 +78,5 @@ DATAUTLEVERING_NNRR_per30.04.19.docx
 NNRR_variabelliste_utlevering_tyrdal.csv
 Variabler 1A.csv
 Variabler 1B.csv
+12.08.20 TallTilAarsrapport2019 med kommentarer MW.pdf
+Tall som kan være aktuell for kvartalsrapport.pdf
