--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -80,3 +80,37 @@ TallTilAarsrapport2019.tex
 beh_kommunalt.pdf
 beh_spesialist.pdf
 figure
+AarsakSmerte.png
+AarsakSmerte.wmf
+Alder_pr_enhet_pr_aar.png
+Alder_pr_enhet_pr_aar.wmf
+NDI_PrePost.png
+NDI_PrePost.wmf
+ODI_KliniskViktig.wmf
+ODI_PrePost.png
+ODI_PrePost.wmf
+PainDurationNow.png
+PainDurationNow.wmf
+PatientAge.png
+PatientAge.wmf
+Smerte_i_aktivitet.png
+Smerte_i_aktivitet.wmf
+Smerte_i_ro.png
+Smerte_i_ro.wmf
+beh_kommunalt.png
+beh_kommunalt.wmf
+beh_spesialist.png
+beh_spesialist.wmf
+fornoyd_med_behandling.wmf
+hcsl_hoy.png
+hcsl_hoy.wmf
+klin_vikt_endr_smerte_aktiv.wmf
+klin_vikt_endr_smerte_passiv.wmf
+minimal_funksjonsnedsettelse.wmf
+nytte_av_behandling.wmf
+pasrapp_beh_klinikk.png
+pasrapp_beh_klinikk.wmf
+smertevarighet_str_enn_2aar.png
+smertevarighet_str_enn_2aar.wmf
+tilbake_i_arbeid.wmf
+tverrfagligbeh.wmf
