--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -80,3 +80,6 @@ Variabler 1A.csv
 Variabler 1B.csv
 12.08.20 TallTilAarsrapport2019 med kommentarer MW.pdf
 Tall som kan være aktuell for kvartalsrapport.pdf
+30.08.20 Årsrapport 2019 versjon 10.docx
+datakvalNNRR_v2.synctex.gz
+datakvalNNRR_v2.tex
