--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -83,3 +83,6 @@ Tall som kan være aktuell for kvartalsrapport.pdf
 30.08.20 Årsrapport 2019 versjon 10.docx
 datakvalNNRR_v2.synctex.gz
 datakvalNNRR_v2.tex
+Kvartalsrapport.docx
+smertebilde.PNG
+~$artalsrapport.docx
