--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -114,3 +114,16 @@ smertevarighet_str_enn_2aar.png
 smertevarighet_str_enn_2aar.wmf
 tilbake_i_arbeid.wmf
 tverrfagligbeh.wmf
+KvartalsrapportNNRR_Bergen.pdf
+KvartalsrapportNNRR_OUS.pdf
+KvartalsrapportNNRR_StOlavs.pdf
+KvartalsrapportNNRR_UNN.pdf
+KvartalsrapportNNRR_v2 - Kopi.pdf
+KvartalsrapportNNRR_v2-concordance.tex
+KvartalsrapportNNRR_v2.log
+KvartalsrapportNNRR_v2.pdf
+KvartalsrapportNNRR_v2.synctex.gz
+KvartalsrapportNNRR_v2.tex
+alder.pdf
+smertebilde.PNG
+figfolder
