--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -127,3 +127,7 @@ KvartalsrapportNNRR_v2.tex
 alder.pdf
 smertebilde.PNG
 figfolder
+TallTilAarsrapport2020-concordance.tex
+TallTilAarsrapport2020.log
+TallTilAarsrapport2020.synctex.gz
+TallTilAarsrapport2020.tex
