--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -86,3 +86,23 @@ datakvalNNRR_v2.tex
 Kvartalsrapport.docx
 smertebilde.PNG
 ~$artalsrapport.docx
+TallTilAarsrapport2020_v2 hentet ut 20.04.21- med ønsker til ny datadump.pdf
+tab19_arb_forstekonsult.csv
+tab23_behandling_spestjeneste.csv
+tab23_odi_prepost_tverrfaglig.csv
+tab23_type_behandling.csv
+tab25_behandling_spestjeneste.csv
+tab26_type_behandling.csv
+tab28_tverrfagl_vurdert.csv
+tab29_behandling_spestjeneste.csv
+tab29_pasientrapp_beh_ellers.csv
+tab29_pasientrapp_beh_klin.csv
+tab30_pasientrapp_beh_ellers.csv
+tab30_type_behandling.csv
+tab3_dem.csv
+tab4_tidligere_op.csv
+tab4_varighetsmerte.csv
+tab5_tidligere_op.csv
+tab7_FABQ_EQ5D.csv
+tab8_diagnoser.csv
+tabny_enfaglig_vurdert.csv
