--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -131,3 +131,9 @@ TallTilAarsrapport2020-concordance.tex
 TallTilAarsrapport2020.log
 TallTilAarsrapport2020.synctex.gz
 TallTilAarsrapport2020.tex
+TallTilAarsrapport2020_v2-concordance.tex
+TallTilAarsrapport2020_v2.log
+TallTilAarsrapport2020_v2.synctex.gz
+TallTilAarsrapport2020_v2.tex
+minimal_funksjonsnedsettelse_v2.pdf
+minimal_funksjonsnedsettelse_v2.wmf
