--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -114,3 +114,19 @@ smertevarighet_str_enn_2aar.png
 smertevarighet_str_enn_2aar.wmf
 tilbake_i_arbeid.wmf
 tverrfagligbeh.wmf
+KvartalsrapportNNRR_v2-concordance.tex
+KvartalsrapportNNRR_v2.log
+KvartalsrapportNNRR_v2.synctex.gz
+KvartalsrapportNNRR_v2.tex
+TallTilAarsrapport2020-concordance.tex
+TallTilAarsrapport2020.log
+TallTilAarsrapport2020.synctex.gz
+TallTilAarsrapport2020.tex
+TallTilAarsrapport2020_v2-concordance.tex
+TallTilAarsrapport2020_v2.log
+TallTilAarsrapport2020_v2.synctex.gz
+TallTilAarsrapport2020_v2.tex
+alder.pdf
+minimal_funksjonsnedsettelse_v2.pdf
+minimal_funksjonsnedsettelse_v2.wmf
+smertebilde.PNG
