--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -83,3 +83,25 @@ Tall som kan være aktuell for kvartalsrapport.pdf
 30.08.20 Årsrapport 2019 versjon 10.docx
 datakvalNNRR_v2.synctex.gz
 datakvalNNRR_v2.tex
+Kvartalsrapport.docx
+TallTilAarsrapport2020_v2 hentet ut 20.04.21- med ønsker til ny datadump.pdf
+smertebilde.PNG
+tab19_arb_forstekonsult.csv
+tab23_behandling_spestjeneste.csv
+tab23_odi_prepost_tverrfaglig.csv
+tab23_type_behandling.csv
+tab25_behandling_spestjeneste.csv
+tab26_type_behandling.csv
+tab28_tverrfagl_vurdert.csv
+tab29_behandling_spestjeneste.csv
+tab29_pasientrapp_beh_ellers.csv
+tab29_pasientrapp_beh_klin.csv
+tab30_pasientrapp_beh_ellers.csv
+tab30_type_behandling.csv
+tab3_dem.csv
+tab4_tidligere_op.csv
+tab4_varighetsmerte.csv
+tab5_tidligere_op.csv
+tab7_FABQ_EQ5D.csv
+tab8_diagnoser.csv
+tabny_enfaglig_vurdert.csv
