--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -135,3 +135,15 @@ TallTilAarsrapport2020_v2.synctex.gz
 TallTilAarsrapport2020_v2.tex
 minimal_funksjonsnedsettelse_v2.pdf
 minimal_funksjonsnedsettelse_v2.wmf
+KvartalsrapportNNRR_Alesund.pdf
+KvartalsrapportNNRR_Haukeland.pdf
+KvartalsrapportNNRR_Kristiansand.pdf
+KvartalsrapportNNRR_Levanger.pdf
+KvartalsrapportNNRR_Sandnessjoen.pdf
+KvartalsrapportNNRR_Stavanger.pdf
+KvartalsrapportNNRR_UNNHarstad.pdf
+KvartalsrapportNNRR_UNNTromso.pdf
+TallTilAarsrapport2021-concordance.tex
+TallTilAarsrapport2021.log
+TallTilAarsrapport2021.synctex.gz
+TallTilAarsrapport2021.tex
