--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -106,3 +106,10 @@ tab5_tidligere_op.csv
 tab7_FABQ_EQ5D.csv
 tab8_diagnoser.csv
 tabny_enfaglig_vurdert.csv
+KLADD KvartalsrapportNNRR_v2.pdf
+Kvartalsrapport NNRR med innspill til rapport aug 21.pdf
+Variabler 1B.zip
+kodebok_07092021.xlsx
+kodebok_nnrr_2021_11_04_alle.xlsx
+kodebok_nnrr_2021_11_04_gyldige.xlsx
+~$kodebok_nnrr_2021_11_04_alle.xlsx
