--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -147,3 +147,4 @@ TallTilAarsrapport2021-concordance.tex
 TallTilAarsrapport2021.log
 TallTilAarsrapport2021.synctex.gz
 TallTilAarsrapport2021.tex
+KvartalsrapportNNRR_Drammen.pdf
