--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -148,3 +148,4 @@ TallTilAarsrapport2021.log
 TallTilAarsrapport2021.synctex.gz
 TallTilAarsrapport2021.tex
 KvartalsrapportNNRR_Drammen.pdf
+KvartalsrapportNNRR_Aalesund.pdf
