--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nnrrFigAndelerPrePost)
 export(nnrrFigAntallKjonnsdelt)
 export(nnrrFigGjsnGrVarTid)
 export(nnrrFigGjsnPrePostGrVar)
+export(nnrrFigGjsnPrePostGrVar_v2)
 export(nnrrFigIndikator)
 export(nnrrGjsnPrePostGrVar)
 export(nnrrHentRegData)
