--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -149,3 +149,37 @@ TallTilAarsrapport2021.synctex.gz
 TallTilAarsrapport2021.tex
 KvartalsrapportNNRR_Drammen.pdf
 KvartalsrapportNNRR_Aalesund.pdf
+NDI_12mnd.pdf
+NDI_12mnd.wmf
+NDI_6mnd.pdf
+NDI_6mnd.wmf
+NDI_basis.pdf
+NDI_basis.wmf
+ODI_12mnd.pdf
+ODI_12mnd.wmf
+ODI_6mnd.pdf
+ODI_6mnd.wmf
+ODI_basis.pdf
+ODI_basis.wmf
+Sivilstatus.pdf
+Sivilstatus.wmf
+Smerte_i_aktivitet_12mnd.pdf
+Smerte_i_aktivitet_12mnd.wmf
+Smerte_i_aktivitet_6mnd.pdf
+Smerte_i_aktivitet_6mnd.wmf
+Smerte_i_aktivitet_basis.pdf
+Smerte_i_aktivitet_basis.wmf
+Smerte_i_ro_12mnd.pdf
+Smerte_i_ro_12mnd.wmf
+Smerte_i_ro_6mnd.pdf
+Smerte_i_ro_6mnd.wmf
+Smerte_i_ro_basis.pdf
+Smerte_i_ro_basis.wmf
+TallTilAarsrapport2021 - opprinnelig.pdf
+andel_beh_spesialist.pdf
+andel_beh_spesialist.wmf
+andel_kvinner.pdf
+andel_kvinner.wmf
+figurer_aarsrapp_2021
+hscl_hoy.pdf
+hscl_hoy.wmf
