--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,18 @@ Version: 0.1
 Date: 2016-09-28
 Author: Kevin Thon
 Maintainer: Kevin Thon <kevin.thon@skde.no>
-Description: Pakke for generering av resultatrapporter for NNRR. Trenger skde-tools (>=0.15).
+Description: Pakke for generering av resultatrapporter for NNRR.
 License: GPL2
 LazyData: TRUE
 Encoding: UTF-8
-Depends: R (>= 3.0.2), rapbase, tidyverse, lubridate
+Depends: R (>= 4.2.0)
 Imports:
-  xtable
-RoxygenNote: 7.1.2
-Suggests: knitr,
-    rmarkdown
+  xtable,
+  tidyverse,
+  lubridate
+Remotes:
+  Rapporteket/rapbase@*release,
+  Rapporteket/rapFigurer
+RoxygenNote: 7.2.0
+Suggests:
 VignetteBuilder: knitr
