Tilpasninger og forenklinger

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(appUi)
 export(binomkonf)
 export(lagKodebok)
 export(nnrrApp)
+export(nnrrBeregnAndeler)
 export(nnrrFigAndelGrvar)
 export(nnrrFigAndelTid)
 export(nnrrFigAndeler)
@@ -22,6 +23,7 @@ export(nnrrHentRegData)
 export(nnrrIndikatorTabell)
 export(nnrrPrepVar)
 export(nnrrPreprosess)
+export(nnrrSoyleplot)
 export(nnrrUtvalg)
 export(tr_summarize_output)
 export(vask_diagnoser)
