--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,15 @@ export("%m-%")
 export(appServer)
 export(appUi)
 export(binomkonf)
+export(fordelingsfigServer)
+export(fordelingsfig_UI)
+export(indikatorfigServer)
+export(indikatorfig_UI)
 export(lagKodebok)
 export(nnrrApp)
 export(nnrrBeregnAndeler)
+export(nnrrBeregnGjsnPrePostGrVar)
+export(nnrrBeregnIndikator)
 export(nnrrFigAndelGrvar)
 export(nnrrFigAndelTid)
 export(nnrrFigAndeler)
@@ -21,10 +27,14 @@ export(nnrrFigIndikator)
 export(nnrrGjsnPrePostGrVar)
 export(nnrrHentRegData)
 export(nnrrIndikatorTabell)
+export(nnrrPlotGjsnPrePostGrVar)
+export(nnrrPlotIndikator)
 export(nnrrPrepVar)
 export(nnrrPreprosess)
 export(nnrrSoyleplot)
 export(nnrrUtvalg)
+export(sykehusvisningServer)
+export(sykehusvisning_UI)
 export(tr_summarize_output)
 export(vask_diagnoser)
 importFrom(lubridate,"%m+%")
