--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nnrr
 Type: Package
 Title: Resultatrapporter for Norsk nakke- og ryggregister
-Version: 0.1
+Version: 0.7
 Date: 2016-09-28
 Author: Kevin Thon
 Maintainer: Kevin Thon <kevin.thon@skde.no>
@@ -14,7 +14,8 @@ Imports:
   xtable,
   tidyverse,
   lubridate,
-  shinyjs
+  shinyjs,
+  janitor
 Remotes:
   Rapporteket/rapbase@*release,
   Rapporteket/rapFigurer
