--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(indikatorfigServer)
 export(indikatorfig_UI)
 export(lagKodebok)
 export(nnrrApp)
+export(nnrrBeregnAndelTid)
 export(nnrrBeregnAndeler)
 export(nnrrBeregnGjsnPrePostGrVar)
 export(nnrrBeregnIndikator)
@@ -35,6 +36,8 @@ export(nnrrSoyleplot)
 export(nnrrUtvalg)
 export(sykehusvisningServer)
 export(sykehusvisning_UI)
+export(tidsvisningServer)
+export(tidsvisning_UI)
 export(tr_summarize_output)
 export(vask_diagnoser)
 importFrom(lubridate,"%m+%")
