--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(nnrrPlotIndikator)
 export(nnrrPrepVar)
 export(nnrrPreprosess)
 export(nnrrSoyleplot)
+export(nnrrTidsplot)
 export(nnrrUtvalg)
 export(sykehusvisningServer)
 export(sykehusvisning_UI)
