--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(nnrrPreprosess)
 export(nnrrSoyleplot)
 export(nnrrTidsplot)
 export(nnrrUtvalg)
+export(set.proxy.helsenord)
 export(sykehusvisningServer)
 export(sykehusvisning_UI)
 export(tidsvisningServer)
