--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("%m-%")
 export(appServer)
 export(appUi)
 export(binomkonf)
+export(datadump_UI)
 export(fordelingsfigServer)
 export(fordelingsfig_UI)
 export(indikatorfigServer)
@@ -36,6 +37,8 @@ export(nnrrSoyleplot)
 export(nnrrTidsplot)
 export(nnrrUtvalg)
 export(set.proxy.helsenord)
+export(startside)
+export(startside_UI)
 export(sykehusvisningServer)
 export(sykehusvisning_UI)
 export(tidsvisningServer)
