--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,20 @@ services:
     image: mysql:5.7
     command: --innodb-log-file-size=500M --innodb_strict_mode=0
     restart: "no"
+    volumes:
+      - ~/softlinks/mysql_db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
 
   dev:
     depends_on:
       - db
-    image: rapporteket/nnrr-dev:test
+    image: rapporteket/nnrr-dev:weekly
     volumes:
       - ~/.ssh:/home/rstudio/.ssh
       - ~/.gitconfig:/home/rstudio/.gitconfig
+      - ~/GIT/nnrr:/home/rstudio/nnrr
+      - ~/softlinks/mydata:/home/rstudio/mydata
     ports:
       - "8787:8787"
       - "3838:3838"
