--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -184,3 +184,7 @@ hscl_hoy.pdf
 hscl_hoy.wmf
 indikatorer_2021
 indikatorer_2022
+TallTilAarsrapport2022-concordance.tex
+TallTilAarsrapport2022.log
+TallTilAarsrapport2022.synctex.gz
+TallTilAarsrapport2022.tex
