Samlerapport lagt til i app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(nnrrPreprosess)
 export(nnrrSoyleplot)
 export(nnrrTidsplot)
 export(nnrrUtvalg)
+export(samledok_UI)
+export(samledok_server)
 export(startside)
 export(startside_UI)
 export(sykehusvisningServer)
