--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(nnrrPlotIndikator)
 export(nnrrPrepVar)
 export(nnrrPreprosess)
 export(nnrrSoyleplot)
+export(nnrrStabelGrvar)
 export(nnrrTidsplot)
 export(nnrrUtvalg)
 export(samledok_UI)
