Slår sammen 6 og 12 mnd figurer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(nnrrPreprosess)
 export(nnrrSoyleplot)
 export(nnrrStabelGrvar)
 export(nnrrTidsplot)
+export(nnrrTidsplot_6og12mnd)
 export(nnrrUtvalg)
 export(samledok_UI)
 export(samledok_server)
