--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -188,3 +188,20 @@ TallTilAarsrapport2022-concordance.tex
 TallTilAarsrapport2022.log
 TallTilAarsrapport2022.synctex.gz
 TallTilAarsrapport2022.tex
+KvartalsrapportNNRR_aalesund.pdf
+KvartalsrapportNNRR_drammen.pdf
+KvartalsrapportNNRR_haukeland.pdf
+KvartalsrapportNNRR_kristiansand.pdf
+KvartalsrapportNNRR_levanger.pdf
+KvartalsrapportNNRR_ous.pdf
+KvartalsrapportNNRR_sandnessjoen.pdf
+KvartalsrapportNNRR_stavanger.pdf
+KvartalsrapportNNRR_stavern.pdf
+KvartalsrapportNNRR_stolavs.pdf
+KvartalsrapportNNRR_unnharstad.pdf
+KvartalsrapportNNRR_unntromso.pdf
+KvartalsrapportNNRR_v3-concordance.tex
+KvartalsrapportNNRR_v3.log
+KvartalsrapportNNRR_v3.pdf
+KvartalsrapportNNRR_v3.synctex.gz
+KvartalsrapportNNRR_v3.tex
