slå sammen 6 og 12

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(nnrrBeregnAndeler)
 export(nnrrBeregnGjsnPrePostGrVar)
 export(nnrrBeregnIndikator)
 export(nnrrFigAndelGrvar)
+export(nnrrFigAndelGrvar_6og12mnd)
 export(nnrrFigAndelTid)
 export(nnrrFigAndeler)
 export(nnrrFigAndelerPrePost)
