Feilsøking og validerng

--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -205,3 +205,8 @@ KvartalsrapportNNRR_v3.log
 KvartalsrapportNNRR_v3.pdf
 KvartalsrapportNNRR_v3.synctex.gz
 KvartalsrapportNNRR_v3.tex
+TallTilAarsrapport2023-concordance.tex
+TallTilAarsrapport2023.log
+TallTilAarsrapport2023.synctex.gz
+TallTilAarsrapport2023.tex
+datakvalNNRR_2023.pdf
