--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -210,3 +210,4 @@ TallTilAarsrapport2023.log
 TallTilAarsrapport2023.synctex.gz
 TallTilAarsrapport2023.tex
 datakvalNNRR_2023.pdf
+KvartalsrapportNNRR_rapporteket.tex
