--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -113,3 +113,4 @@ kodebok_07092021.xlsx
 kodebok_nnrr_2021_11_04_alle.xlsx
 kodebok_nnrr_2021_11_04_gyldige.xlsx
 ~$kodebok_nnrr_2021_11_04_alle.xlsx
+Søknad om utlevering av data fra NNRR- 3 sheets med ønskede variabler.xlsx
