--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -212,3 +212,7 @@ TallTilAarsrapport2023.synctex.gz
 TallTilAarsrapport2023.tex
 datakvalNNRR_2023.pdf
 KvartalsrapportNNRR_rapporteket.tex
+TallTilAarsrapport2024-concordance.tex
+TallTilAarsrapport2024.pdf
+TallTilAarsrapport2024.synctex.gz
+TallTilAarsrapport2024.tex
