--- a/inst/.gitignore
+++ b/inst/.gitignore
@@ -216,3 +216,6 @@ TallTilAarsrapport2024-concordance.tex
 TallTilAarsrapport2024.pdf
 TallTilAarsrapport2024.synctex.gz
 TallTilAarsrapport2024.tex
+datakvalNNRR_2023.log
+datakvalNNRR_2023.synctex.gz
+datakvalNNRR_2023.tex
