--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -114,3 +114,7 @@ kodebok_nnrr_2021_11_04_alle.xlsx
 kodebok_nnrr_2021_11_04_gyldige.xlsx
 ~$kodebok_nnrr_2021_11_04_alle.xlsx
 Søknad om utlevering av data fra NNRR- 3 sheets med ønskede variabler.xlsx
+analyser validering nnrr.pdf
+analyser_validering_nnrr.html
+analyser_validering_nnrr_files
+doc.zip
